components/common/ImageCard/ImageCard.module.scss
@use '@styles/mixins';

.image__card {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  vertical-align: middle;
  background: var(--color-blue-2);
  cursor: pointer;
  &::before,
  &::after {
    box-sizing: inherit;
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
  }
}

.image__card__inner {
  padding: 2rem;
  position: absolute;
  height: 100%;
  left: 0;
  right: 0;
  z-index: 10;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-family: var(--font-family-alt);
  font-weight: 700;
}

.image__card__line {
  position: absolute;
  z-index: 100;
  width: 90%;
  height: 90%;
}

.image__card__inner__title {
  margin-top: auto;
  padding-top: 1rem;
  color: var(--color-white);
  font-size: 3.5rem;
  text-transform: uppercase;
  line-height: 1;

  @include mixins.breakpoint-up(md) {
    font-size: 3.5rem;
  }

  @include mixins.breakpoint-up(xl) {
    font-size: 5rem;
  }
}

.image__card__inner__subtitle {
  color: var(--color-white);
  font-size: var(--font-size-subtitle);
  margin-top: auto;
  padding-bottom: 1rem;
}

